# py-kabusapi

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini  upload_to_pypi.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test-import.yml
docs/: README.md  authentication.md  basic-usage.md  configuration.md  error-handling.md  market-data.md  orders.md  wallet.md
docs/examples/: README.md  basic_example.py
pseudocode/: apis.py
py-kabusapi/: api.py  api_response_model.py  error.py  response_model.py  test.py
py_kabusapi/: __init__.py  api.py  const.py  response_model.py
tests/: README_API_TESTS.md  README_TESTS.md  __init__.py  test_api.py  test_api_sequential.py  test_import.py  test_simple_import.py
