[project]
name = "py-kabusapi"
version = "0.0.0"
description = "Python wrapper for kabuステーション API"
authors = [{name = "Sakaguchi Ryo", email = "sakaguchi@sk-techfirm.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "ipython",
    "ruff",
    "pydantic",
    "websocket-client"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "F401"]
