[project]
name = "py-kabusapi"
version = "1.0.0"
description = "Python wrapper for kabuステーション API"
authors = [{name = "Sakaguchi Ryo", email = "sakaguchi@sk-techfirm.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "ipython",
    "ruff",
    "pydantic",
    "websocket-client",
    "pytest"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "F401"]

[tool.ruff.lint.per-file-ignores]
"py_kabusapi/response_model.py" = ["N815"]  # Allow mixedCase for API response fields

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-m", "test_env or (not api_integration and not websocket)",
]
markers = [
    "prod_env: tests for production environment",
    "test_env: tests that work in test environment",
    "order_api: tests for order APIs (potentially dangerous)",
    "slow: tests that take longer than usual",
    "api_integration: tests that require actual API connection",
    "websocket: tests for WebSocket functionality",
    "websocket_model: tests for WebSocket data models",
    "integration: tests that require real service connection",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
